Refactor: role 기반 접근 제어 로직 추가