@@ -1,6 +1,7 @@
 package com.capstone.rentit.login.dto;
 
 import com.capstone.rentit.common.MemberRoleConverter;
+import com.capstone.rentit.common.MemberRoleEnum;
 import com.capstone.rentit.member.domain.Member;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -10,6 +11,8 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @RequiredArgsConstructor
@@ -17,9 +20,20 @@ public class MemberDetails implements UserDetails {
 
     private final Member member;
 
+    private boolean isUser(MemberRoleEnum role){
+        return role != MemberRoleEnum.ADMIN;
+    }
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + MemberRoleConverter.fromInteger(member.getRole().ordinal())));
+        if(!isUser(member.getRole())){
+            return Collections.singletonList(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        }
+        else{
+            List<String> roles = List.of("ROLE_USER", "ROLE_" + MemberRoleConverter.roleToString(member.getRole()));
+            return roles.stream()
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
+        }
     }
 
     @Override
